Implement Test Cases of Notice Count Api